--- a/src/cpp/tf_custom_ops/BUILD
+++ b/src/cpp/tf_custom_ops/BUILD
@@ -1,10 +1,10 @@
 load("//tensorflow:tensorflow.bzl", "tf_custom_op_library")
 
-tf_custom_op_library(
-    name = "pet_gpu.so",
-    srcs = ["pet_gpu.cc"],
-    gpu_srcs = ["pet_gpu.cu.cc"],
-)
+# tf_custom_op_library(
+#     name = "pet_gpu.so",
+#     srcs = ["pet_gpu.cc"],
+#     gpu_srcs = ["pet_gpu.cu.cc"],
+# )
 
 tf_custom_op_library(
     name = "tor.so",
@@ -29,5 +29,11 @@ tf_custom_op_library(
     name = "siddon_gpu.so",
     srcs = ["siddon_gpu.cc"],
     gpu_srcs = ["siddon_gpu.cu.cc"]
+)
+
+tf_custom_op_library(
+    name = "siddon.so",
+    srcs = ["siddon.cc"],
+    gpu_srcs = ["siddon.cu.cc"],
 )
 
