runable external backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Data
+*.h5
+*.npy
+*.s
+*.rec
+*.txt
+*.ve
+*.v
+*.trans
+
+#Header
+*.hs
+*.hdr
+*.hv
+*.ahv
+
+# Other
+*.m
+sm
+run.sh
+start.py
+data2numpy.py
+run0809.py
+__init__.pyc
+*.par
+
 # Prerequisites
 *.d
 
