add distance driven op in PET

--- a/src/cpp/tf_custom_ops/BUILD
+++ b/src/cpp/tf_custom_ops/BUILD
@@ -44,3 +44,9 @@ tf_custom_op_library(
     gpu_srcs = ["siddon2.cu.cc"],
 )
 
+
+tf_custom_op_library(
+    name = "siddon3.so",
+    srcs = ["siddon.cc"],
+    gpu_srcs = ["siddon_crystal.cu.cc"],
+)
